--- a/Chat(teste)/Chat(teste).csproj
+++ b/Chat(teste)/Chat(teste).csproj
@@ -9,9 +9,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icons\Camera.png" />
+    <None Remove="Icons\Phone.png" />
+    <None Remove="Icons\Plus.png" />
+    <None Remove="Icons\Send.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Icons\Camera.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Icons\Phone.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Icons\Plus.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Icons\Send.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="MVVM\View\" />
     <Folder Include="Core\" />
-    <Folder Include="Icons\" />
   </ItemGroup>
 
 </Project>
