--- a/Chat(teste)/Chat(teste).csproj
+++ b/Chat(teste)/Chat(teste).csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="Icons\Camera.png" />
+    <None Remove="Icons\GD.jpg" />
     <None Remove="Icons\Phone.png" />
     <None Remove="Icons\Plus.png" />
     <None Remove="Icons\Send.png" />
@@ -17,6 +18,9 @@
 
   <ItemGroup>
     <Content Include="Icons\Camera.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Icons\GD.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Icons\Phone.png">
@@ -32,7 +36,6 @@
 
   <ItemGroup>
     <Folder Include="MVVM\View\" />
-    <Folder Include="Core\" />
   </ItemGroup>
 
 </Project>
